--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Карта точок</title>
     <link rel="icon" type="image/png" href="/img/map.png">
+    <base href="/r2p_map/">
     
     <!-- Стилі -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
