--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Стилі -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet-control-search/dist/leaflet-search.min.css" />
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/r2p_map/css/styles.css">
     
 </head>
 <body>
@@ -20,8 +20,8 @@
     <!-- Підключення Leaflet.js та плагіна пошуку -->
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script src="https://unpkg.com/leaflet-control-search/dist/leaflet-search.min.js"></script>
-    <script src="/js/map.js"></script>
-    <script src="/js/search.js"></script>
+    <script src="/r2p_map/js/map.js"></script>
+    <script src="/r2p_map/js/search.js"></script>
 
 </body>
 </html>
