--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Карта точок</title>
-    <link rel="icon" type="image/png" href="/img/map.png">
+    <link rel="icon" type="/r2p_map/image/png" href="/r2p_map/img/map.png">
     <base href="/r2p_map/">
     
     <!-- Стилі -->
